--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="7DwHt6eQhI05AOph_CSn7WUntesKuNmAtwij24gvYsU" />
 <!doctype html>
 <html lang="en">
 <head>
